@@ -19,6 +19,7 @@ Current:
   * Bugfixes
     - bug #40055: AVRDUDE segfaults when writing eeprom
     - bug #40085: Typo fix in fuses report (for 6.1-svn-20130917)
+    - bug #40817: Elf file support (possibly) not working on 6.0.1 windows build
     - patch #XXXX: xxx
 
   * Internals:
